Added webpack config

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,3 +3,4 @@ type = "javascript"
 route = "$worker_route"
 account_id = "$CF_ACCOUNT_ID"
 zone_id = "$CF_ZONE_ID"
+webpack_config = "webpack.config.js"
